# text

./: debug.sh
benchmark/: create_cpp_pipeline.py
benchmark/csrc/: CMakeLists.txt  benchmark_jit_pipeline.cpp
build_tools/setup_helpers/: extension.py
torchtext/csrc/: init.cpp  register_bindings.cpp  torchtext.cpp  torchtext.h
